[package]
name = "rsa-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.42"
rand = "0.8.5"
rsa = "0.7.2"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "rsa_benchmark"
harness = false
